<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2016 AospExtended ROM Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/customisation_title">

        <com.android.settingslib.widget.TopIntroPreference
            android:key="custom_illustration_desc"
            android:title="@string/custom_illustration_description"/>
            
        <com.android.settingslib.widget.IllustrationPreference
            android:key="custom_illustration"
            app:lottie_rawRes="@raw/customization"/>
            
    <PreferenceCategory
        android:key="monet_category"
        android:title="@string/monet_category">

        <Preference
            android:key="monet_engine"
            android:title="@string/monet_engine_title"
            android:summary="@string/monet_engine_summary"
            android:fragment="org.arcana.grimoire.fragments.MonetEngine"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="theme_customization_category"
        android:title="@string/theme_customization_category">

   <org.arcana.support.preference.SystemSettingSwitchPreference
        android:key="use_wp_zoom"
        android:title="@string/use_wp_zoom_title"
        android:summary="@string/use_wp_zoom_summary"
        android:defaultValue="false" />
                
        <Preference
            android:key="android.theme.customization.fonts"
            android:title="@string/theme_customization_font_title"
            android:summary="@string/theme_customization_font_summary"
            android:fragment="org.arcana.grimoire.fragments.FontsPicker"/>

        <Preference
            android:key="android.theme.customization.icon_pack"
            android:title="@string/theme_customization_icon_pack_title"
            android:summary="@string/theme_customization_icon_pack_summary"
            android:fragment="org.arcana.grimoire.fragments.StatusbarIcons"/>

        <Preference
            android:key="android.theme.customization.signal_icon"
            android:title="@string/theme_customization_signal_icon_title"
            android:summary="@string/theme_customization_signal_icon_summary"
            android:fragment="org.arcana.grimoire.fragments.SignalIcons"/>

        <Preference
            android:key="android.theme.customization.wifi_icon"
            android:title="@string/theme_customization_wifi_icon_title"
            android:summary="@string/theme_customization_wifi_icon_summary"
            android:fragment="org.arcana.grimoire.fragments.WifiIcons"/>

        <Preference
            android:key="android.theme.customization.adaptive_icon_shape"
            android:title="@string/theme_customization_icon_shape_title"
            android:summary="@string/theme_customization_icon_shape_summary"
            android:fragment="org.arcana.grimoire.fragments.IconShapes"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/lock_screen_custom_clock_face_category">

        <ListPreference
            android:key="lock_screen_custom_clock_face"
            android:summary="%s"
            android:title="@string/lock_screen_custom_clock_face_title"
            android:entries="@array/lock_screen_custom_clock_face_entries"
            android:entryValues="@array/lock_screen_custom_clock_face_values" />
            
        <org.arcana.support.preference.SystemSettingSwitchPreference
            android:key="lockscreen_small_clock"
            android:title="@string/force_lockscreen_small"
            android:summary="@string/force_lockscreen_small_summary"
            android:defaultValue="true" />
            
    </PreferenceCategory>

    <PreferenceCategory
        android:key="corners_category"
        android:title="@string/corners_category" >

     <org.arcana.support.preference.SecureSettingSwitchPreference
            android:key="sysui_rounded_fwvals"
            android:title="@string/corner_fwvals"
            android:summary="@string/corner_fwvals_summary"
            android:defaultValue="true"
            android:disableDependentsState="true" />

     <org.arcana.support.preference.CustomSeekBarPreference 
            android:key="sysui_rounded_size"
            android:title="@string/corner_radius"
            android:max="60"
            settings:min="0"
            settings:units="dp"
            android:persistent="false"
            android:dependency="sysui_rounded_fwvals" />
            
     <org.arcana.support.preference.SystemSettingSeekBarPreference
            android:key="statusbar_left_padding"
            android:title="@string/statusbar_left_padding"
            android:max="30"
            android:min="-5"
            settings:units="dp"
            android:defaultValue="3"/>

     <org.arcana.support.preference.SystemSettingSeekBarPreference
            android:key="statusbar_right_padding"
            android:title="@string/statusbar_right_padding"
            android:max="30"
            android:min="-5"
            settings:units="dp"
            android:defaultValue="0"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="udfps_category"
        android:title="@string/udfps_category">

        <Preference
            android:key="udfps_icon_picker"
            android:title="@string/udfps_icon_picker_title"
            android:summary="@string/udfps_icon_picker_summary"
            android:fragment="org.arcana.grimoire.fragments.UdfpsIconPicker" />

        <Preference
            android:key="udfps_recognizing_animation_preview"
            android:title="@string/udfps_recog_animation_effect_title"
            android:summary="@string/udfps_recog_animation_effect_summary"
            android:fragment="org.arcana.grimoire.fragments.UdfpsAnimation"/>

    </PreferenceCategory>

</PreferenceScreen>

